--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -15,15 +14,15 @@
         }
         html {
             height: 100%;
-            overflow-y: scroll;
+            overflow-y: auto;
             -webkit-overflow-scrolling: touch;
         }
         body {
             font-family: Arial, sans-serif;
             padding: 15px;
             background: #f8fafc;
-            min-height: 100%;
-            overflow-y: scroll;
+            min-height: 100vh;
+            overflow-y: auto;
             -webkit-overflow-scrolling: touch;
         }
         .page { 
@@ -31,7 +30,7 @@
             max-width: 500px; 
             margin: 0 auto;
             padding-bottom: 60px;
-            min-height: calc(100vh + 100px);
+            min-height: auto;
         }
         .page.active { 
             display: block; 
@@ -49,6 +48,7 @@
             margin: 15px 0;
             cursor: pointer;
             -webkit-appearance: none;
+            touch-action: manipulation;
         }
         .btn:disabled { background: #ccc; }
         .card {
